--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/src/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>Jobpilot</title>
 </head>
 <body>
     <section class="top_navigation">
         <div class="container nav_top">
-            <div class="row d-flex justify-content-between align-items-center">
+            <div class="row inner_nav d-flex justify-content-between align-items-center">
                 <div class="col-2">
                     <div class="logo_box d-flex justify-content-between align-items-center">
                         <img src="/src/images/logo.png">
@@ -47,19 +47,56 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <section class="navigation_banner">
-        <div class="container banner_container mt-3 d-flex justify-content-center align-items-center text-center flex-column">
-            <div class="bannerlogo">
-                <img src="/src/images/globe.png">
+        <div class="container banner_container page_appear mt-3 d-flex justify-content-center align-items-center text-center">
+            <div class="col-1">
+                <div class="left-banner d-flex flex-column">
+                    <div class="left-banner-text d-flex justify-content-center">
+                        <p>Jobpilot</p>
+                    </div>
+                    <div class="left-banner-line d-flex justify-content-center">
+                        <div class="line"></div>  
+                    </div>
+                    <div class="left-banner-bottom-text d-flex justify-content-center">
+                        <p>No.1 Jobseeker Platform</p>
+                    </div>
+                </div>
             </div>
-            <h2 class="mb-4">Jobpilot</h2>
-            <p>The Comprehensive Destination for Career Seekers to Take Off and Navigate the Complex World of Job Search</p>
+            <div class="col-9 d-flex flex-column align-items-center">
+                <div class="bannerlogo">
+                    <img src="/src/images/globe.png">
+                </div>
+                <div class="banner_text">
+                    <h2 class="mb-4">Jobpilot</h2>
+                <p>The Comprehensive Destination for Career Seekers to Take Off and Navigate the Complex World of Job Search</p>
+                </div>
+            </div>
+            <div class="col-2 right_banner d-flex flex-column align-items-center">
+                <div class="right_banner_text">
+                    <h2 class="right_banner_header">Build Your </br>
+                        <span>Dream Career</span></br>
+                        With Us!
+                    </h2>
+                </div>
+                <div class="button_circle d-flex justify-content-center align-items-center">
+                    <button class="getStarted">Get Started
+                        <i class="bi bi-arrow-up-right"></i>
+                    </button>
+                </div>
+            </div>
+  
+            
+
+
+
 
         </div>
-        <div class="banner_polygon ">
+        <div class="banner_polygon page_appear ">
         </div>
     </section>
+
+    <section>
+        aaaaaaaa
+    </section>
+    <script src="/src/scripts/index.js"></script>
 </body>
 </html>
