--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <!-- <p class="language_text light_theme_color">EN</p> -->
                         </div>
                         <div class="buttons_box d-flex gap-2 justify-content-between align-items-center">
-                            <button class="button light_theme_color">log in</button>
+                            <a href="/login.html"><button class="button light_theme_color">log in</button></a>
                             <button class="button button_full">Register</button>
                         </div>
                     </div>
