--- a/login.html
+++ b/login.html
@@ -28,16 +28,12 @@
                           <input type="email" class="form-control inputform mt-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control inputform mt-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                          </div>
+                        
                         <div class="form-group mt-2">
                           <label for="exampleInputPassword1">Password</label>
                           <input type="password" class="form-control inputform mt-2" id="exampleInputPassword1" placeholder="Password">
                         </div>
-                        <button type="submit" class="btn signInButton btn-primary mt-3">Sign in</button>
+                        <button type="submit" class="btn signInButton btn-primary mt-3" id="signInButton">Sign in</button>
                       </form>
                 </div>
                 <div class="col-6 mt-4">
@@ -48,5 +44,6 @@
             </div>
         </div>
     </div>
+    <script src="/src/scripts/login_fire.js" type="module"></script>
 </body>
 </html>
