--- a/registration.html
+++ b/registration.html
@@ -42,12 +42,8 @@
                         <div class="form-group mt-2">
                           <label for="exampleInputPassword1">Password</label>
                           <input type="password" class="form-control inputform mt-2" id="exampleInputPassword1" placeholder="Password">
-                        </div>
-                        <div class="form-group mt-2">
-                            <label for="exampleInputPassword1">Confirm Password</label>
-                            <input type="password" class="form-control inputform mt-2" id="exampleInputPassword1" placeholder="Password">
-                          </div>  
-                        <button type="submit" class="btn signInButton btn-primary mt-3">Sign up</button>
+                        </div> 
+                        <button type="submit" class="btn signInButton btn-primary mt-3" id="signUpButton">Sign up</button>
                       </form>
                 </div>
                 <div class="col-6 mt-4">
@@ -58,5 +54,6 @@
             </div>
         </div>
     </div>
+    <script src="/src/scripts/registration_fire.js" type="module"></script>
 </body>
 </html>
