--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
                 </div>
                 <div class="col-4">
                     <div class="right_navigation_box d-flex justify-content-end gap-3 align-items-center">
-                        <div class="language_box d-flex justify-content-between align-items-center text-center gap-1">
-                            <i class="bi bi-globe2 light_theme_color"></i>
-                            <select id="language" class="light_theme_color">
-                                <option value="EN" class="language_change">EN</option>
-                                <option value="GE" class="language_change">GE</option>
-                            </select>
-                        </div>
-                        <div class="userProfile">
+                        <div class="userProfile profile_view">
                             <div class="user_profile_border d-flex justify-content-center align-items-center">
-                                <div class="user_inner">
-
+                                <div class="user_inner d-flex justify-content-center align-items-center">
+                                    <i class="bi bi-person-fill text-center d-flex"></i>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="profile_name profile_view d-flex justify-content-between align-items-center text-center flex-column">
+                            <div class="name_box d-flex justify-content-center flex-column align-items-center text-center">
+                                <p class="full_name"></p>
+                                <p class="user_name"></p>
+                            </div>
+                            <div class="username_box">
                             </div>
                         </div>
                         <div class="buttons_box d-flex gap-2 justify-content-between align-items-center">
