--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/src/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <title>Jobpilot</title>
 </head>
@@ -18,8 +18,8 @@
             <div class="row inner_nav d-flex justify-content-between align-items-center">
                 <div class="col-2">
                     <div class="logo_box d-flex justify-content-between align-items-center">
-                        <img src="/src/images/logo.png">
-                        <p class="d-flex text-center logo_text">Jobpilot</p>
+                        <a href="/index.html"><img src="/src/images/logo.png"></a>
+                        <a href="/index.html" class="logo_text"><p class="d-flex text-center logo_text">Jobpilot</p></a>      
                     </div>
                 </div>
                 <div class="col-6">
