--- a/index.html
+++ b/index.html
@@ -95,9 +95,44 @@
         <div class="banner_polygon page_appear ">
         </div>
     </section>
+    <section class="partner_company mt-5">
+        <div class="container">
+            <div class="col-12 row d-flex justify-content-center align-items-center flex-column">
+                <p class="company_header"> Trusted by the world's leading organizations ↘︎</p>
+                <div class="company_list mt-2">
+                    <div class="col-12 d-flex row gap-3">
+                        <div class="imgbox d-flex justify-content-center align-items-center">
+                            <img src="https://github.githubassets.com/images/modules/site/home-campaign/logos/stripe.svg">
+                        </div>
+                        <div class="imgbox d-flex justify-content-center align-items-center">
+                            <img src="https://github.githubassets.com/images/modules/site/home-campaign/logos/pinterest.svg">
+                        </div>
+                        <div class="imgbox d-flex justify-content-center align-items-center">
+                            <img src="https://github.githubassets.com/images/modules/site/home-campaign/logos/kpmg.svg">
+                        </div>
+                        <div class="imgbox d-flex justify-content-center align-items-center">
+                            <img src="https://github.githubassets.com/images/modules/site/home-campaign/logos/mercedes.svg">
+                        </div>
+                        <div class="imgbox d-flex justify-content-center align-items-center">
+                            <img src="https://github.githubassets.com/images/modules/site/home-campaign/logos/pg.svg">
+                        </div>
+                        <div class="imgbox d-flex justify-content-center align-items-center">
+                            <img src="https://github.githubassets.com/images/modules/site/home-campaign/logos/telus.svg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="job_posting_form mt-5">
+        <div class="container">
+            <div class="row jobpostbtn_box">
 
-    <section>
-        aaaaaaaa
+            </div>
+        </div>
+    </section>
+    <section class="jobs_list mt-5">
+        <p>aaaa</p>
     </section>
     <script src="/src/scripts/index.js"></script>
     <script src="/src/scripts/index_fire.js" type="module"></script>
