--- a/user.html
+++ b/user.html
@@ -247,7 +247,9 @@
                                         </div>
                                     </div>
                                     <div class="content" id="content-3">
-                                        <p>aaa</p>
+                                        <div class="col-12 row mt-5 d-flex justify-content-center gap-5 saved_items">
+                                            
+                                        </div>
                                     </div>
                                 </div>
                             </div>
