--- a/carrer_post.html
+++ b/carrer_post.html
@@ -30,8 +30,8 @@
                             <input type="text" class="form-control inputform mt-2" id="exampleInputText1" placeholder="Enter Company name">
                           </div>
                         <div class="form-group mt-2">
-                          <label for="exampleInputFile1">Company Logo</label>
-                          <input type="file" id="fileInp" accept="image/png, image/jpeg," class="form-control inputform mt-2" id="exampleInputFile1">
+                            <label for="exampleInputTextt">Company Logo URL</label>
+                            <input type="text" class="form-control inputform mt-2" id="exampleInputTextt" placeholder="Enter company logo url">
                         </div>
                         <div class="form-group mt-2">
                             <label for="exampleInputEmail1">Contact Email</label>
